--- a/style.css
+++ b/style.css
@@ -49,10 +49,11 @@
 }
 .happy-customers {
     background-image: url('https://plus.unsplash.com/premium_photo-1661411411451-9292493eaa88?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); /* Replace with your actual image path */
-    background-size: cover; 
+    background-size:contain; 
     background-position: center;
-    color: rgb(249, 252, 251); 
-    font-size:large;
+    color: #ebd78f ; 
+    font-size:larger;
+    font-weight: bolder;
     padding: 30px 10px; 
     text-align: center; 
 }
@@ -62,7 +63,11 @@
     margin-bottom: 5%;
     text-align: left;
 }
+.style-bar{
+    background-color: #a98f30 !important;
+}
 
+/* contact section */
 .contact {
 	margin: 2% 30%;
 	width: 40%;
@@ -73,6 +78,7 @@
     text-align: center;
 	margin-top: 3%;
 }
+/* footer section */
 .footer-design{
     text-align: center;
     background-color: rgb(135, 170, 201);
@@ -83,5 +89,12 @@
 .style-icon {
 	display: flex;
 	align-items: center;
-	margin: 2% 48%;
+    justify-content: space-around;
+	margin: 2% 47%;
+}
+.style-icon a{
+    color: black;
+}
+.style-icon a :hover{
+    color: rgb(171, 95, 148);
 }
