--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@
     margin: 1% 25%;
 }
 .happy-customers {
-    background-image: url('https://plus.unsplash.com/premium_photo-1661411411451-9292493eaa88?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); /* Replace with your actual image path */
+    background-image: url('https://plus.unsplash.com/premium_photo-1661411411451-9292493eaa88?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); 
     background-size:contain; 
     background-position: center;
     color: #ebd78f ; 
